--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Leckerli+One');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Fredericka+the+Great:100,200,300,400,500,600,700|Leckerli+One');
 
 .bg-color-name-title {
     background-color:#67676700;
 }
 
 .ui-menu-color-home {
-    background-color: #e67e22;
+    background-color: #8a6d3b;
 }
 .ui-menu-color-resume  {
     background-color: #9b59b6;
@@ -19,10 +19,6 @@
     background-color: #525252;
 }
 
-
-
-
-
 .logo {
     background: url("heritagedraws.jpg");
     background-position: center;
@@ -33,7 +29,6 @@
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
-    
 }
 
 
@@ -164,36 +159,38 @@ body {
 .pricelist {
     background-color: transparent;
 }
-/*.col-md-8 {*/
-/*    padding-right: 0px; */
-/*     padding-left: 0px*/
-/*}*/
 
-/*.row {*/
-     /*margin-right: 0px; */
-/*     margin-left: 0px; */
-/*}*/
+.home {
+    background-color: #ccc;
+}
 
-/*.logo {*/
-/*    width: 300px;*/
-/*    height: 300px;*/
-/*}*/
+h4 {
+    font-family: 'Fredericka the Great', cursive;
+    background-color: #3c763d61;
+    font-size: 26px;
+}
 
+.btn-success {
+    margin-bottom: 10px;
+}
 
+footer {
+    /*height: 80px;*/
+    background-color: #ada8da;
+    margin-right: -15px;
+    margin-left: -15px;
+}
 
+.fimg {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
 
+.price {
+    height: 960px;
+}
 
-
-
-/*.navbar-default {*/
-/*    background-color: #5e5d84;*/
-/*    border-color: #5F5A80;*/
-/*    margin-top: 20px;*/
-/*}*/
-
-/*.navbar-default .navbar-nav>li>a {*/
-/*    color: #f5f5f5;*/
-/*}*/
-
-
-
+.list {
+    margin-top: 152px;
+}
